# Konaai-ML

./: .dockerignore  .gitignore  Dockerfile  README.md  build_exe.py  conftest.py  copyright.txt  docker-compose.yml  pylint.rc  pyproject.toml  server.spec  windows_build.ps1
.github/workflows/: build.yml
code/data_generators/: PO_data_generation.py  config.ini  expense_data_generation.py  generate_master.py  invoices_data_generation.py  p2p_features.py  payments_data_generation.py  stress_data_generation.ipynb  stress_data_generator.py  utils.py
code/notebooks/: 2_way_match.ipynb  Benford Anomaly.ipynb  Experiment 2 - Target Leakage.ipynb  Explainability.ipynb  Feature Selection.ipynb  OCR and Evaluations.ipynb  Pairwise Distance.ipynb  Pattern Feature Mapper.ipynb  Text Procesing.ipynb  Updated Pattern Feature Mapper.ipynb  classification modelling.ipynb  distributions.ipynb  stem_lemma_generator.ipynb  wordcloud.ipynb
code/notebooks/2-way match/: Experiment 1.ipynb
code/notebooks/Lead Generator/: lead_generator.ipynb
code/notebooks/UNSPC_Feature_Creation/: UNGM_UNSPSC.xlsx  unspc.ipynb
code/src/: api_routes.py  external_dependencies.py  scheduler.py  setup_service.py  worker.py
code/src/admin/: all_pages.py  config.ini  console.py  menu.py  theme.py  utils.py
code/src/assets/: creds.yaml  ml_feature_mapping.json
code/src/automl/: api.py  classifiers.py  config.ini  custom_transformer.py  datetime_encoder.py  explainer.py  feature_builder.py  feature_encoder.py  feature_selection.py  fetch_data.py  ml_params.py  model.py  model_tracker.py  montioring.py  numeric_encoder.py  onehot_encoder.py  prediction_pipeline.py  preprocess.py  questionnaire.py  risk_scoring.sql  splitter.py  tasks.py  training_pipeline.py  utils.py  validator.py  woe_calculator.py
code/src/butler/: api.py  api_setup.py  celery_app.py  celery_broker.py  celery_config.py  celery_result_backend.py  celery_signals.py  celery_states.py  cleanup.py  config.ini  tasks.py  utils.py
code/src/insight/: config.ini  download_report.py  email_report.py  fetch_insightdata.py
code/src/insight_agent/: api.py  audit_data.py  constants.py  insight_agent.ipynb  transaction_agent.py
code/src/sql_agent/: api.py  context_evaluation.py  data_dictionary.ipynb  data_dictionary.py  data_qery.ipynb  data_query.py  embedding.py  errors.py  filter_conditions.py  query_parser.py  (+4 more)
docker/: Dockerfile  docker readme.md  docker-compose.azure.yml  docker-compose.local.yml  docker-compose.yml
docs/: code.html  search.js
windows_deployment/: windows_deployment.ps1
(+82 files in other folders)
